--- a/404.html
+++ b/404.html
@@ -1,12 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=/" />
+    <meta charset="utf-8" />
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; URL=/" />
     <script>
-      // Preserve path
+      // Preserve the original path + query + hash
       const redirectTo = '/' + location.pathname + location.search + location.hash;
       sessionStorage.redirect = redirectTo;
     </script>
   </head>
-  <body></body>
+  <body>
+    Redirecting...
+  </body>
 </html>
